# Hackathon08_phase1-2-3-4

Hackathon08 -Phase1/: .gitignore  GEMINI.md  README.md
Hackathon08 -Phase1/.specify/memory/: constitution.md
Hackathon08 -Phase1/specs/001-cli-todo-app/: quickstart.md  tasks.md
Hackathon08 -Phase1/src/: tasks.json  todo.py
Hackathon08 -Phase1/tests/integration/: test_crud.py
Hackathon08 -Phase1/tests/unit/: test_models.py  test_recurrence.py
Hackathon08 -Phase2/: .gitignore
Hackathon08 -Phase2/.specify/memory/: constitution.md
Hackathon08 -Phase2/backend/: init_db.py  pyproject.toml  requirements.txt
Hackathon08 -Phase2/backend/src/: config.py  database.py  main.py  models.py
Hackathon08 -Phase2/frontend/: package-lock.json  package.json
Hackathon08 -Phase2/specs/001-cli-todo-app/: data-model.md  plan.md
Hackathon08 -Phase2/specs/002-cli-todo-advanced/: plan.md  quickstart.md
Hackathon08 -Phase2/specs/003-web-expansion/: data-model.md  (+1 more)
Hackathon08 -Phase2/src/: cli.py
Hackathon08 -Phase3/: .gitignore  DEPLOY.md  GUIDE.md  README.md  requirements-dev.txt
Hackathon08 -Phase3/backend/: Dockerfile  init_db.py
Hackathon08 -Phase3/frontend/: .prettierignore  tailwind.config.ts
Hackathon08 -Phase4/: .dockerignore  .gitignore  DEPLOY.md  GEMINI.md  README.md  tasks.json
Hackathon08 -Phase4/backend/: .gitignore  Dockerfile  check_function_tool_type.py  deploy_hf.py  requirements.txt
Hackathon08 -Phase4/frontend/: .eslintignore  Dockerfile  package.json  vercel.json
Hackathon08 -Phase4/src/: models.py  services.py  storage.py  utils.py
(+115 files in other folders)
